# gst-inference

./: .gitignore  AUTHORS  COPYING  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README.md  REQUIREMENTS  autogen.sh  configure.ac  gst-inference.doap  gst-inference.pc.in  meson.build  meson_options.txt
.github/workflows/: main.yml
docker/: Dockerfile  Dockerfile-Ubuntu-16.04  README.md
docs/: meson.build
docs/plugins/: Makefile.am  gst-inference-plugin-sections.txt  meson.build
ext/: Makefile.am  meson.build
ext/opencv/: Makefile.am  gstclassificationoverlay.cc  gstclassificationoverlay.h  gstdetectionoverlay.cc  gstdetectionoverlay.h  gstembeddingoverlay.cc  gstembeddingoverlay.h  gstinferencealert.c  gstinferencealert.h  gstinferenceoverlay.c  gstinferenceoverlay.cc  gstinferenceoverlay.h  gstinferenceoverlayplugin.c  gstplugin.cc  meson.build
ext/r2inference/: Makefile.am  gstfacenetv1.c  gstfacenetv1.h  gstgooglenet.c  gstgooglenet.h  gstinceptionv1.c  gstinceptionv1.h  gstinceptionv2.c  gstinceptionv2.h  gstinceptionv3.c  gstinceptionv3.h  gstinceptionv4.c  gstinceptionv4.h  gstinference.c  gstinferencebin.c  gstmobilenetv2.c  gstmobilenetv2.h  gstmobilenetv2ssd.c  gstmobilenetv2ssd.h  gstresnet50v1.c  gstresnet50v1.h  gstrosetta.c  gstrosetta.h  gsttinyyolo.c  gsttinyyolo.h  gsttinyyolov2.c  gsttinyyolov2.h  gsttinyyolov3.c  gsttinyyolov3.h  meson.build  postprocess.c  postprocess.h  preprocess.c  preprocess.h
gst/: Makefile.am  meson.build
gst-libs/: Makefile.am  meson.build
gst-libs/gst/: Makefile.am  meson.build
gst-libs/gst/opencv/: Makefile.am  gstinferencebaseoverlay.c  gstinferencebaseoverlay.cc  gstinferencebaseoverlay.h  gstinferenceoverlay.c  gstinferenceoverlay.h  meson.build
gst-libs/gst/r2inference/: Makefile.am  gstbackend.cc  gstbackend.h  gstbackendsubclass.h  gstbasebackend.cc  gstbasebackend.h  gstbasebackendsubclass.h  gstchildinspector.c  gstchildinspector.h  gstedgetpu.cc  gstedgetpu.h  gstinference.c  gstinferencebackend.cc  gstinferencebackends.cc  gstinferencebackends.h  gstinferenceclassification.c  gstinferenceclassification.h  gstinferencedebug.c  gstinferencedebug.h  gstinferencemeta.c  gstinferencemeta.h  gstinferencepostprocess.c  gstinferencepostprocess.h  gstinferenceprediction.c  gstinferenceprediction.h  gstinferencepreprocess.c  gstinferencepreprocess.h  gstncsdk.cc  gstncsdk.h  gsttensorflow.cc  gsttensorflow.h  gsttensorrt.cc  gsttensorrt.h  gsttflite.cc  gsttflite.h  gstvideoinference.c  gstvideoinference.cc  gstvideoinference.h  meson.build
gst/inferencecrop/: Makefile.am  cropelement.cc  cropelement.h  gstdetectioncrop.cc  gstdetectioncrop.h  gstinferencecrop.cc  gstinferencecrop.h  videocrop.cc  videocrop.h
gst/inferencedebug/: Makefile.am  gstinferencedebug.c  gstinferencedebug.h
gst/inferencefilter/: Makefile.am  gstinferencefilter.c  gstinferencefilter.cc  gstinferencefilter.h
gst/inferenceutils/: Makefile.am  cropelement.cc  gstinferencebin.c  gstinferencebin.h  gstinferencecrop.cc  gstinferencedebug.c  gstinferencefilter.c  gstinferencefilter.h  gstinferenceutils.c  meson.build  videocrop.h
tests/: Makefile.am  meson.build
tests/benchmark/: run_benchmark.sh
tests/check/: Makefile.am  meson.build
tests/check/process/: meson.build  preprocess_functions_utils.c  preprocess_functions_utils.h  test_gst_fill_classification_meta_function.c  test_gst_normalize_function.c  test_gst_pixel_to_float_function.c  test_gst_subtract_mean_function.c  test_postprocess_functions.c  test_postprocess_methods.c  test_preprocess_functions.c  test_preprocess_methods.c
tests/examples/: Makefile.am  meson.build
tests/examples/classification/: Makefile.am  README.md  customlogic.cc  customlogic.h  gstclassification.c  meson.build
tests/examples/detection/: Makefile.am  README.md  customlogic.cc  customlogic.h  gstdetection.c  meson.build
tests/examples/embedding/: Makefile.am  README.md  customlogic.cc  customlogic.h  gstembedding.c  meson.build
tests/examples/embedding/embeddings/: embeddings.txt  labels.txt
tests/examples/face_detection/: facedetection_run.py  facedetection_train.py  readme.txt
tests/files/: Makefile.am
